--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huynhps09200.duanmau">
+    package="com.doan.nhom12">
 
     <application
         android:allowBackup="true"
@@ -9,17 +9,16 @@
         android:roundIcon="@drawable/avtbook"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.huynhps09200.nhom12.ThongkeActivity"></activity>
-        <activity android:name="com.huynhps09200.nhom12.SalesActivity" />
-        <activity android:name="com.huynhps09200.nhom12.BillManagerActivity" />
-        <activity android:name="com.huynhps09200.nhom12.AddTypeActivity" />
-        <activity android:name="com.huynhps09200.nhom12.AddBookActivity" />
-        <activity android:name="com.huynhps09200.nhom12.AddPersonalActivity" />
-        <activity android:name="com.huynhps09200.nhom12.AboutActivity" />
-        <activity android:name="com.huynhps09200.nhom12.MKActivity" />
-        <activity android:name="com.huynhps09200.nhom12.MainActivity" />
-        <activity android:name="com.huynhps09200.nhom12.LoginActivity" />
-        <activity android:name="com.huynhps09200.nhom12.Start">
+        <activity android:name="com.doan.nhom12.AddTypeActivity"></activity>
+        <activity android:name="com.doan.nhom12.SalesActivity" />
+        <activity android:name="com.doan.nhom12.BillManagerActivity" />
+        <activity android:name="com.doan.nhom12.AddBookActivity" />
+        <activity android:name="com.doan.nhom12.AddPersonalActivity" />
+        <activity android:name="com.doan.nhom12.AboutActivity" />
+        <activity android:name="com.doan.nhom12.MKActivity" />
+        <activity android:name="com.doan.nhom12.MainActivity" />
+        <activity android:name="com.doan.nhom12.LoginActivity" />
+        <activity android:name="com.doan.nhom12.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
